methods.flowerpot.FlowerPot.scala.error
Compilation error:
FlowerPot:9: error: not found: value getPos
  getPos(5,5)
  ^